public/css/styles.css
/* Installtion 18 */

@import url(animations.css);

body { background:url(../img/bg-body.png) repeat; }

header {
	padding:10px;
	background:url(../img/bg-topo.png)repeat #383838;
	color:#fff;
	text-shadow: 0 2px 0 #000;
}

.logo {
	color:#D93F40;
	font-weight:800;
	font-size: 3.5em;
	margin:0;
	font-family: inherit;
	font-weight: 300;
}

.tagline {
	margin:0 0 12px 0;
	font-size:0.9em;
	font-family: inherit;
}

.section-header {
	color:#008cba;
	font-weight:800;
	font-size: 1.5em;
	margin:0 0 6px 0;
	font-family: inherit;
}

.count-number {
	font-size: 0.8em;
	background:#D93F40;
	border-radius:50%;
	padding: 3px 5px;
	margin-left: 5px;
}

.total-tweets, .chart { text-align: center; }
.total-tweets-number {
	font-size: 9em;
	color:#383838;
	font-weight: 800;
	margin:0;
}
.whodidit {
	margin:12px 0;
	color:#ddd;
	font-style:italic;
	font-size:.8em;
}

.scroll {
	height:650px;
	overflow: auto;
}

/* Tweet */
.tweet {
	list-style-type: none;
	margin:0; padding:0;
	font-size: .7em;
}

.tweet li {
	background:rgba(250,250,250,0.8);
  	-moz-box-shadow:    0 2px 1px 0 rgba(0,0,0,0.16);
  	-webkit-box-shadow: 0 2px 1px 0 rgba(0,0,0,0.16);
  	box-shadow:         0 2px 1px 0 rgba(0,0,0,0.16);
  	margin-bottom:12px;
  	width:95%;
  	overflow: auto;
}

.tweet span {
	margin-right:6px;
	color:#b4b4b4;
}
.tweet .avatar {
	float:left;
	margin:0 4px 0 0;
	padding:6px;
	width:75px;
	height:75px;
}

.tweet .text {
	font-size: 1.2em;
	margin:0 10px 10px 77px;
}

p.text a { color:#D93F40; }
p.text a:hover { color:#ba2829; text-decoration: underline; }


/* CSS Tabs */
@-webkit-keyframes content-opacity {
  from {
    opacity: 0; }

  to {
    opacity: 1; } }

@-moz-keyframes content-opacity {
  from {
    opacity: 0; }

  to {
    opacity: 1; } }

@-o-keyframes content-opacity {
  from {
    opacity: 0; }

  to {
    opacity: 1; } }

@keyframes content-opacity {
  from {
    opacity: 0; }

  to {
    opacity: 1; } }

@-webkit-keyframes content-rotate-y {
  from {
    -webkit-transform: rotateY(90deg);
    -moz-transform: rotateY(90deg);
    -ms-transform: rotateY(90deg);
    -o-transform: rotateY(90deg);
    transform: rotateY(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    -moz-transform: rotateY(0deg);
    -ms-transform: rotateY(0deg);
    -o-transform: rotateY(0deg);
    transform: rotateY(0deg); } }

@-moz-keyframes content-rotate-y {
  from {
    -webkit-transform: rotateY(90deg);
    -moz-transform: rotateY(90deg);
    -ms-transform: rotateY(90deg);
    -o-transform: rotateY(90deg);
    transform: rotateY(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    -moz-transform: rotateY(0deg);
    -ms-transform: rotateY(0deg);
    -o-transform: rotateY(0deg);
    transform: rotateY(0deg); } }

@-o-keyframes content-rotate-y {
  from {
    -webkit-transform: rotateY(90deg);
    -moz-transform: rotateY(90deg);
    -ms-transform: rotateY(90deg);
    -o-transform: rotateY(90deg);
    transform: rotateY(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    -moz-transform: rotateY(0deg);
    -ms-transform: rotateY(0deg);
    -o-transform: rotateY(0deg);
    transform: rotateY(0deg); } }

@keyframes content-rotate-y {
  from {
    -webkit-transform: rotateY(90deg);
    -moz-transform: rotateY(90deg);
    -ms-transform: rotateY(90deg);
    -o-transform: rotateY(90deg);
    transform: rotateY(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    -moz-transform: rotateY(0deg);
    -ms-transform: rotateY(0deg);
    -o-transform: rotateY(0deg);
    transform: rotateY(0deg); } }

@-webkit-keyframes content-rotate-x {
  from {
    -webkit-transform: rotateX(90deg);
    -moz-transform: rotateX(90deg);
    -ms-transform: rotateX(90deg);
    -o-transform: rotateX(90deg);
    transform: rotateX(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    -moz-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    -o-transform: rotateX(0deg);
    transform: rotateX(0deg); } }

@-moz-keyframes content-rotate-x {
  from {
    -webkit-transform: rotateX(90deg);
    -moz-transform: rotateX(90deg);
    -ms-transform: rotateX(90deg);
    -o-transform: rotateX(90deg);
    transform: rotateX(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    -moz-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    -o-transform: rotateX(0deg);
    transform: rotateX(0deg); } }

@-o-keyframes content-rotate-x {
  from {
    -webkit-transform: rotateX(90deg);
    -moz-transform: rotateX(90deg);
    -ms-transform: rotateX(90deg);
    -o-transform: rotateX(90deg);
    transform: rotateX(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    -moz-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    -o-transform: rotateX(0deg);
    transform: rotateX(0deg); } }

@keyframes content-rotate-x {
  from {
    -webkit-transform: rotateX(90deg);
    -moz-transform: rotateX(90deg);
    -ms-transform: rotateX(90deg);
    -o-transform: rotateX(90deg);
    transform: rotateX(90deg); }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    -moz-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    -o-transform: rotateX(0deg);
    transform: rotateX(0deg); } }
/* ... */

